# nd-forez

./: .dockerignore  BuildWindowsApp.bat  Dockerfile  LICENSE  README.md  build.py  index.html
assets/: index-64NS2Y8b.js  index-BRqEjLBn.js  index-BeDr7rdK.js  index-BjXZrrCo.js  index-BldaYoee.js  index-C-UdhxpA.js  index-CUIA8Lxu.js  index-Cv_i8H9u.js  index-D2kroU_s.js  index-DOh81dow.css  index-DWQS65y7.js  index-Dnhn5K-O.js  (+62 more)
server/: .gitignore  main.py  pyproject.toml
server/lib/: sdfind.py  wden.py
server/models/: models.py
server/src/: api.py  database.py  main.py  run.py  test.py  window_state.py
server/src/lib/: analyzis.py  compare_data.py  glfind.py  msbackadj.py  parsing.py  sdfind.py  wden2.py
server/src/lib/glfind/: classify_and_extract_library_peaks.py  compute_fragmented_library_concentrations.py  compute_hidden_library_area.py  compute_smooth_library_concentrations.py  filter_isolated_peaks.py  filter_lonely_peaks.py  find_reference_peaks.py  find_selected_peaks.py  find_signal_minima.py  find_significant_peaks.py  find_significant_peaks2.py  glfind.py  handle_smooth_library_case.py  refine_lib_peak_locations.py  refine_library_peaks.py  refine_minima_near_reference_peaks.py  refine_selected_peaks.py  select_isolated_peaks.py  select_reference_peaks.py
server/src/lib/matlab/: msbackadj.py  round.py  wden.py
server/src/lib/parsing/: parsing_any.py  parsing_frf.py
server/src/lib/sdfind/: compute_peak_areas.py  find_matching_peaks.py  sdfind.py
server/src/models/: database.py  models.py
server/tkinter/: glfind.py  main.py  sdfind.py
(+98 files in other folders)
