[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.14",
    "numpy>=2.3.1",
    "python-multipart>=0.0.20",
    "pywavelets>=1.8.0",
    "scipy>=1.16.0",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = []
