[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard-no-fastapi-cloud-cli]>=0.116.1",
    "numpy>=2.3.2",
    "pydantic>=2.11.7",
    "pywavelets>=1.9.0",
    "scipy>=1.16.1",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = []

[tool.setuptools]
packages = ["lib", "models"]
package-dir = {"" = "src"}
